--- a/serviceOrder/src/io/github/paulinhocorazza/screens/LoginScreen.form
+++ b/serviceOrder/src/io/github/paulinhocorazza/screens/LoginScreen.form
@@ -99,7 +99,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Usuario:"/>
+        <Property name="text" type="java.lang.String" value="Usu&#xe1;rio:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
@@ -109,7 +109,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Ordens de Servicos - Login"/>
+        <Property name="text" type="java.lang.String" value="Ordens de Servi&#xe7;os - Login"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtUser">
