--- a/serviceOrder/src/io/github/paulinhocorazza/screens/MainScreen.form
+++ b/serviceOrder/src/io/github/paulinhocorazza/screens/MainScreen.form
@@ -64,6 +64,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Servi&#xe7;os"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuServicesActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuCustomers">
               <Properties>
