--- a/serviceOrder/src/io/github/paulinhocorazza/screens/ServiceOrderScreen.form
+++ b/serviceOrder/src/io/github/paulinhocorazza/screens/ServiceOrderScreen.form
@@ -435,6 +435,9 @@
           <Image iconType="3" name="/io/github/paulinhocorazza/icons/iconfinder_printer_39263.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPrintServiceOrderActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
