--- a/serviceOrder/src/io/github/paulinhocorazza/screens/ClientScreen.form
+++ b/serviceOrder/src/io/github/paulinhocorazza/screens/ClientScreen.form
@@ -64,11 +64,11 @@
                                       </Group>
                                       <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                          <Component id="txtClientAddress" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="txtClientAddress" alignment="0" pref="465" max="32767" attributes="0"/>
                                           <Component id="txtClientName" alignment="0" max="32767" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="txtClientSearch" min="-2" pref="415" max="-2" attributes="0"/>
-                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                               <Component id="iconMagnifyingGlass" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <Component id="txtClientId" alignment="0" min="-2" pref="53" max="-2" attributes="0"/>
@@ -103,15 +103,15 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="iconMagnifyingGlass" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtClientSearch" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="iconMagnifyingGlass" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="90" max="-2" attributes="0"/>
-              <EmptySpace pref="42" max="32767" attributes="0"/>
+              <EmptySpace pref="58" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtClientId" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -500,7 +500,7 @@
     <Component class="javax.swing.JLabel" name="iconMagnifyingGlass">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/io/github/paulinhocorazza/icons/iconfinder_search_magnifying_glass_find_103857.png"/>
+          <Image iconType="3" name="/io/github/paulinhocorazza/icons/pesquisar.png"/>
         </Property>
       </Properties>
       <Events>
